syntax = "proto3";

package api;

enum ProcessingType {
  GRAYSCALE = 0;
  PIXELATE = 1;
  BLUR = 2;
  // Add new kind here
}

service ApiGateway {
  rpc ProcessImage(ProcessImageRequest) returns (ProcessImageResponse);
}

message ProcessImageRequest {
  bytes image_data = 1;
  ProcessingType processing_type = 2;
}

message ProcessImageResponse {
  bytes result = 1;
}
